trustfall_core/test_data/tests/parse_errors/transform_first_directive.parse-error.ron
Err(UnsupportedDirectivePosition("@transform", "this directive cannot appear as a first directive", Pos(
    line: 4,
    column: 29,
)))
